# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.7.xx
DATE 0x/xx/2012
51st Alpha Release

NEW: [features/enhancements]
+Choose directory dialog from Find Dialog will now automatically expand to the directory of the
current file.

BUG FIXES:
+Fix major and apparently very long standing issue on Windows systems where
application profiles were not getting updated correctly and settings would get
lost between updates.
+Fix issues with sessions not getting updated properly under some use cases.
+Fix crash condition that could occur when reload of file fails.
+Fix file encoding detection issue that some systems experienced.
+Fix UTF-16 decoding issues / regressions due to change in behavior between
python2.6 and 2.7.

#-----------------------------------------------------------------------------#

VERSION 0.7.01
DATE 04/23/2012
50th Alpha Release

NEWS:
Update to fix issue with translations.

BUG FIXES:
+Fix localizations not loading correctly.

#-----------------------------------------------------------------------------#
VERSION 0.7.00
DATE 04/22/2012
49th Alpha Release

NEWS:
This is a stabilization and maintenance release targeting bugs that have been reported over the
last several months. Biggest fix is to try to correct some utf-8 handling errors
that were observed by some users of the 0.6.99 release. See release notes below
for specific changes in this release.

NEW: [features/enhancements]
+New version of CodeBrowser plugin (bug fixes for Python / XML / HTML)
+New version of Launch (configurable line buffering, bug fixes)
+Update all translations with current launchpad.

BUG FIXES:
+Fix error that could occur when selecting text in some environments under
certain cases.
+Fix crash that could occur during shutdown during page load.